--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ The goal of passport is to provide multiple authentication and authorization str
 
 ## Installation
 
-Currently, the package is under development. Please feel free to contribute to the package. 
+Currently, the package is under development. Please feel free to contribute to the package. You can install and use the package using `devtools`. 
 
 ```{r installation, eval=FALSE}
 devtools::install_github("jandix/passport")
@@ -27,15 +27,22 @@ devtools::install_github("jandix/passport")
 
 ## Testing
 
-You can use `curl` for testing purposes. Unfortuentaly, curl fastly becomes quite complicated if you want to add a body, parameters and uniques headers. Therefore, we recommend to use [Postman](https://www.getpostman.com/) for larger, more complicated projects. 
+You can use curl for testing purposes. Unfortuentaly, curl fastly becomes quite complicated if you want to add a body, parameters and unique headers. Therefore, we recommend to use [Postman](https://www.getpostman.com/) for larger, more complicated projects. 
+
 
 ## JSON Web Tokens (JWT) 
 
 "JSON Web Tokens are an open, industry standard RFC 7519 method for representing claims securely between two parties." (jwt.io)
 
-The JWT stratgey allows to use JWT to secure your endpoints. It can be used to secure REST APIs without sessions. It is considered to be stateless. Below you find a small introduction to implement a JWT strategy in your application. A great introduction can be found [here](https://jwt.io/introduction/). 
+The JWT stratgey allows to use JWT to secure your endpoints. A great introduction to JWT can be found [here](https://jwt.io/introduction/). It can be used to secure REST APIs without sessions. It is considered to be stateless. Below you find a small introduction to implement a JWT strategy in your application.  
 
 The application consists of three routes. The first route allows your users to login and issues a JWT. The second route is an open route that return the first one hundred entries of the iris dataset. The third route requires authentication using the JWT and return the last 50 entries of the iris dataset.
+
+You can use the curl statement below to test your application:
+
+```
+curl -H "Authorization: Bearer <JWT_TOKEN>" localhost:9090/secret
+```
 
 :warning: Please change the secret to a super secure secret of your choice. Please notice that you have to `preempt = c("passport-jwt")` to routes that should **not** be protected.
 
