--- a/README.Rmd
+++ b/README.Rmd
@@ -13,9 +13,9 @@ knitr::opts_chunk$set(
 )
 ```
 
-# passport
+# sealer
 
-The goal of passport is to provide multiple authentication and authorization strategies for [plumber](https://www.rplumber.io/) by using [filters](https://www.rplumber.io/docs/routing-and-input.html#filters). The package is inspired by the amazing [passport.js](http://www.passportjs.org/) library for Node.js.
+The goal of sealer is to provide multiple authentication and authorization strategies for [plumber](https://www.rplumber.io/) by using [filters](https://www.rplumber.io/docs/routing-and-input.html#filters). The package is inspired by the amazing [passport.js](http://www.passportjs.org/) library for Node.js.
 
 ## Installation
 
@@ -44,7 +44,7 @@ You can use the curl statement below to test your application:
 curl -H "Authorization: Bearer <JWT_TOKEN>" localhost:9090/secret
 ```
 
-:warning: Please change the secret to a super secure secret of your choice. Please notice that you have to `preempt = c("passport-jwt")` to routes that should **not** be protected.
+:warning: Please change the secret to a super secure secret of your choice. Please notice that you have to `preempt = c("sealer-jwt")` to routes that should **not** be protected.
 
 ```{r JWT strategy, eval=FALSE}
 # define a new plumber router
@@ -55,12 +55,12 @@ pr <- plumber::plumber$new()
 secret <- "3ec9aaf4a744f833e98c954365892583"
 
 # integrate the jwt strategy in a filter
-pr$filter("passport-jwt", function (req, res) {
+pr$filter("sealer-jwt", function (req, res) {
   # simply call the strategy and forward the request and response
-  passport::jwt(req = req, res = res, secret = secret)
+  sealer::jwt(req = req, res = res, secret = secret)
 })
 
-# define authentication route to issue web tokens (exclude "passport-jwt" filter using preempt)
+# define authentication route to issue web tokens (exclude "sealer-jwt" filter using preempt)
 pr$handle("POST", "/authentication", function (req, user = NULL, password = NULL) {
   
   # check if user provided credentials
@@ -86,12 +86,12 @@ pr$handle("POST", "/authentication", function (req, user = NULL, password = NULL
   
   # return jwt as response
   return(jwt = jwt)
-}, preempt = c("passport-jwt"))
+}, preempt = c("sealer-jwt"))
 
-# define test route without authentication  (exclude "passport-jwt" filter using preempt)
+# define test route without authentication  (exclude "sealer-jwt" filter using preempt)
 pr$handle("GET", "/", function (req, res) {
   return(iris[1:100, ])
-}, preempt = c("passport-jwt"))
+}, preempt = c("sealer-jwt"))
 
 
 
