--- a/README.Rmd
+++ b/README.Rmd
@@ -44,33 +44,11 @@ We are still at the very beginning of the package and we welcome any support and
 
 ## Testing
 
-You can use curl for testing purposes. Unfortuentaly, curl fastly becomes quite complicated if you want to add a body, parameters and unique headers. Therefore, we recommend to use [Postman](https://www.getpostman.com/) for larger, more complicated projects. 
+You can use curl for testing purposes. Unfortunately, curl quickly gets quite complicated if you want to add a body, parameters and unique headers. Therefore, we recommend to use [Postman](https://www.getpostman.com/) for larger, more complicated projects. 
 
-## JSON Web Tokens (JWT) 
-
-"JSON Web Tokens are an open, industry standard RFC 7519 method for representing claims securely between two parties." (jwt.io)
-
-The JWT stratgey allows to use JWT to secure your endpoints. A great introduction to JWT can be found [here](https://jwt.io/introduction/). It can be used to secure REST APIs without sessions. It is considered to be stateless. Below you find a small introduction to implement a JWT strategy in your application.  
-
-The application consists of three routes. The first route allows your users to login and issues a JWT. The second route is an open route that return the first one hundred entries of the iris dataset. The third route requires authentication using the JWT and return the last 50 entries of the iris dataset.
-
-You can use the curl statement below to test your application:
-
-```
-curl -H "Authorization: Bearer <JWT_TOKEN>" localhost:9090/secret
-```
-
-:warning: Please change the secret to a super secure secret of your choice. Please notice that you have to `preempt = c("sealr-jwt")` to routes that should **not** be protected.
-
-```{r JWT strategy, eval=FALSE}
-# integrate the jwt strategy in a filter
-pr$filter("sealr-jwt", function (req, res) {
-  # simply call the strategy and forward the request and response
-  # please change the secret
-  sealr::jwt(req = req, res = res, secret = "3ec9aaf4a744f833e98c954365892583")
-})
-```
-
+## Examples
+We provide some simple sample implementations for different strategies and use cases. 
+You can find them in the `examples` folder. 
 
 ## Warranity Notice
 
