#18  adapt examples, readmes and roxygen docs

--- a/examples/jwt/jwt_claims_example/README.Rmd
+++ b/examples/jwt/jwt_claims_example/README.Rmd
@@ -11,24 +11,24 @@ JSON Web Tokens (JWT) *can* contain claims. "Claims are statements about an enti
 
 There are three different types of claims: registered, public and private claims. All types of claims are implemented in the same manner, they only differ in whether and where the claims are registered with the Internet Assigned Numbers Authority (IANA). For example, the `iss` claim is a registered claim defined in the JWT standard [RFC 7519](https://tools.ietf.org/html/rfc7519#page-8) and registered at IANA. See the [JWT Introduction](https://jwt.io/introduction/) of [jwt.io](jwt.io) for more details.
 
-`sealr` allows you to check for the validity of all types of claims in a given JWT using the `claims` argument of the `sealr::jwt` function. 
+`sealr` allows you to check for the validity of all types of claims in a given JWT using the `claims` argument of the `sealr::is_authed_jwt` function. 
 
 In this example implementation, we have two filters:
 
-The filter `sealr-jwt` simply checks whether the user is authenticated and that the issuer claim `iss` is set to `mygreatplumberapi`, the value we set in the `authenticate` route.
+The filter `sealr-jwt` simply checks whether the user is authenticated and that the issuer claim `iss` is set to `mygreatplumberapi`, the value we set in the `authentication` route.
 The second filter  `sealr-jwt-admin-only` additionally checks whether the user is an admin by validating that the claim `admin` is `TRUE`. 
 
 ```{r eval=FALSE}
 # integrate the jwt strategy in a filter
 pr$filter("sealr-jwt", function (req, res) {
   # simply call the strategy and forward the request and response
-  sealr::jwt(req = req, res = res, secret = secret,
+  sealr::authenticate(req = req, res = res, is_authed_fun = is_authed_jwt, secret = secret,
              claims = list(iss = "mygreatplumberapi"))
 })
 
 pr$filter("sealr-jwt-admin-only", function (req, res) {
   # simply call the strategy and forward the request and response
-  sealr::jwt(req = req, res = res, secret = secret,
+  sealr::authenticate(req = req, res = res, is_authed_fun = is_authed_jwt, secret = secret,
              claims = list(iss = "mygreatplumberapi", admin = TRUE))
 })
 
@@ -38,6 +38,8 @@ pr$filter("sealr-jwt-admin-only", function (req, res) {
 We now have two levels of access using filters: routes that are open to all authenticated users with a JWT issued by `mygreatplumberapi` and routes that are accessible to admins only. The former requires `preempt`ing the more restrictive `sealr-jwt-admin-only` filter. 
 
 Unfortunately, it is currently not possible to extend this filter-based authorization mechanism to more than two authorization "levels" because `plumber` does not allow for preempting more than one filter per route. 
+This problem is on the radar of the `plumber` team and they'll provide the opportunity to impose filters on specific
+endpoints in the future (kind of "reverting" the `preempt` logic). See [this plumber issue](https://github.com/trestletech/plumber/issues/108).
 
 ## Install the packages
 Install the following packages if you haven't already:
@@ -87,18 +89,20 @@ kableExtra::kable(users, format = "markdown")
 
 Get the JWT for both users: 
 
+**Note**: You might get different JWTs as we also add the time when the token was issued as a claim (`iat`). However, those examples should still work because we do not add an expiration time to the token -  something you should definetely consider for production use cases.  
+
 - Jane 
 
 ```
 curl --data '{"user": "jane@example.com", "password": "12345"}' localhost:9090/authentication
-["eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJteWdyZWF0cGx1bWJlcmFwaSIsImlhdCI6MTU1MjU2NjAzNSwiYWRtaW4iOnRydWUsImdlbmRlciI6IndvbWFuIiwidXNlcklEIjoxfQ.jNSnrZl3_a3iLsfOuJCB0dIvOOgvpZFXC_v48Odh43A"]
+["eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJteWdyZWF0cGx1bWJlcmFwaSIsImlhdCI6MTU1MzY3NjE0NiwiYWRtaW4iOnRydWUsImdlbmRlciI6IndvbWFuIiwidXNlcklEIjoxfQ.AZqJFuXZkjwKbnULHfJVmBapFhZpBgLIUuX7HOJAUhU"]
 ```
 
 - Bob 
 
 ```
 curl --data '{"user": "bob@example.com", "password": "45678"}' localhost:9090/authentication
-["eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJteWdyZWF0cGx1bWJlcmFwaSIsImlhdCI6MTU1MjU2NjE1MSwiYWRtaW4iOmZhbHNlLCJnZW5kZXIiOiJtYW4iLCJ1c2VySUQiOjJ9.rPgUcU3m7P8dhWRYKzMVUFqVH2zdzfgQxpPp6j54ZOE"]
+["eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJteWdyZWF0cGx1bWJlcmFwaSIsImlhdCI6MTU1MzY3NTgzNCwiYWRtaW4iOmZhbHNlLCJnZW5kZXIiOiJtYW4iLCJ1c2VySUQiOjJ9.WjRD5aIaqgApWJ-bf0VosbMZ3ovDyvRVvYug-5egL8s"]
 ```
 
 ### Routes with different authorization levels
@@ -107,14 +111,14 @@ Both users can access the `/secret` route because they both have valid JWT issue
 
 - Jane
 ```
-curl -H "Authorization: Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJteWdyZWF0cGx1bWJlcmFwaSIsImlhdCI6MTU1MjU2NjAzNSwiYWRtaW4iOnRydWUsImdlbmRlciI6IndvbWFuIiwidXNlcklEIjoxfQ.jNSnrZl3_a3iLsfOuJCB0dIvOOgvpZFXC_v48Odh43A" localhost:9090/secret
+curl -H "Authorization: Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJteWdyZWF0cGx1bWJlcmFwaSIsImlhdCI6MTU1MzY3NTc3NSwiYWRtaW4iOnRydWUsImdlbmRlciI6IndvbWFuIiwidXNlcklEIjoxfQ.FXLTGUcsn8yuiS7VqoGEjw94zQsmO6sYdWJeLeS-PhE" localhost:9090/secret
 
 ["Access to route that requires authentication was successful."]
 ```
 
 - Bob
 ```
-curl -H "Authorization: Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJteWdyZWF0cGx1bWJlcmFwaSIsImlhdCI6MTU1MjU2NjE1MSwiYWRtaW4iOmZhbHNlLCJnZW5kZXIiOiJtYW4iLCJ1c2VySUQiOjJ9.rPgUcU3m7P8dhWRYKzMVUFqVH2zdzfgQxpPp6j54ZOE" localhost:9090/secret
+curl -H "Authorization: Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJteWdyZWF0cGx1bWJlcmFwaSIsImlhdCI6MTU1MzY3NTgzNCwiYWRtaW4iOmZhbHNlLCJnZW5kZXIiOiJtYW4iLCJ1c2VySUQiOjJ9.WjRD5aIaqgApWJ-bf0VosbMZ3ovDyvRVvYug-5egL8s" localhost:9090/secret
 
 ["Access to route that requires authentication was successful."]
 ```
@@ -123,14 +127,14 @@ In contrast, only Jane can access the `/secret-admin-only` route.
 
 - Jane
 ```
-curl -H "Authorization: Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJteWdyZWF0cGx1bWJlcmFwaSIsImlhdCI6MTU1MjU2NjAzNSwiYWRtaW4iOnRydWUsImdlbmRlciI6IndvbWFuIiwidXNlcklEIjoxfQ.jNSnrZl3_a3iLsfOuJCB0dIvOOgvpZFXC_v48Odh43A" localhost:9090/secret-admin-only
+curl -H "Authorization: Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJteWdyZWF0cGx1bWJlcmFwaSIsImlhdCI6MTU1MzY3NTc3NSwiYWRtaW4iOnRydWUsImdlbmRlciI6IndvbWFuIiwidXNlcklEIjoxfQ.FXLTGUcsn8yuiS7VqoGEjw94zQsmO6sYdWJeLeS-PhE" localhost:9090/secret-admin-only
 
 ["Access to route that requires admin authorization was successful."]
 ```
 
 - Bob 
 ```
-curl -H "Authorization: Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJteWdyZWF0cGx1bWJlcmFwaSIsImlhdCI6MTU1MjU2NjE1MSwiYWRtaW4iOmZhbHNlLCJnZW5kZXIiOiJtYW4iLCJ1c2VySUQiOjJ9.rPgUcU3m7P8dhWRYKzMVUFqVH2zdzfgQxpPp6j54ZOE" localhost:9090/secret-admin-only
+curl -H "Authorization: Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJteWdyZWF0cGx1bWJlcmFwaSIsImlhdCI6MTU1MzY3NTgzNCwiYWRtaW4iOmZhbHNlLCJnZW5kZXIiOiJtYW4iLCJ1c2VySUQiOjJ9.WjRD5aIaqgApWJ-bf0VosbMZ3ovDyvRVvYug-5egL8s" localhost:9090/secret-admin-only
 
 {"status":["Failed."],"code":[401],"message":["Authentication required."]}
 ```
