--- a/examples/jwt/jwt_simple_example/README.Rmd
+++ b/examples/jwt/jwt_simple_example/README.Rmd
@@ -22,7 +22,7 @@ The JWT filter looks like this:
 pr$filter("sealr-jwt", function (req, res) {
   # simply call the strategy and forward the request and response
   # please change the secret
-  sealr::jwt(req = req, res = res, secret = "3ec9aaf4a744f833e98c954365892583")
+  sealr::authenticate(req = req, res = res, is_authed_fun = is_authed_jwt, secret = "3ec9aaf4a744f833e98c954365892583")
 })
 ```
 
@@ -66,6 +66,8 @@ kableExtra::kable(users, format = "markdown")
 ```
 
 For example, in curl: 
+
+**Note**: You might get different JWTs as `jose::jwt_encode_hmac` automatically adds the time when the JWT was issued as a claim (`iat` claim). However, those examples should still work because we do not add an expiration time to the token -  something you should definetely consider for production use cases.  
 
 ```
 curl --data '{"user": "jane@example.com", "password": "12345"}' localhost:9090/authentication
