--- a/examples/jwt/jwt_simple_example/README.Rmd
+++ b/examples/jwt/jwt_simple_example/README.Rmd
@@ -21,8 +21,8 @@ The JWT filter looks like this:
 # integrate the jwt strategy in a filter
 pr$filter("sealr-jwt", function (req, res) {
   # simply call the strategy and forward the request and response
-  # please change the secret
-  sealr::authenticate(req = req, res = res, is_authed_fun = is_authed_jwt, secret = "3ec9aaf4a744f833e98c954365892583")
+  sealr::authenticate(req = req, res = res, is_authed_fun = sealr::is_authed_jwt,
+                      token_location = "header", secret = secret)
 })
 ```
 
