--- a/docs/docs/sealr/_index.Rmd
+++ b/docs/docs/sealr/_index.Rmd
@@ -25,6 +25,10 @@ knitr::opts_chunk$set(
 The goal of sealr is to provide multiple authentication and authorization strategies for [plumber](https://www.rplumber.io/) by using [filters](https://www.rplumber.io/docs/routing-and-input.html#filters). In doing so, we hope to make best practices in authentication easy to implement for the R community.
 The package is inspired by the amazing [passport.js](http://www.passportjs.org/) library for Node.js.
 
+## Disclaimer
+
+`r emo::ji("warning")` We are currently looking for security experts to help us develop this project / review our code. That being said, while we try to thouroughly understand the concepts behind a strategy before we implement it in `sealr`, **we are not experts** in security. Please make sure you understand the risks and possible attack vectors when using `sealr` - especially in  production environments. `r emo::ji("warning")`
+
 ## Plumber filters for authentication / authorization
 coming soon
 
