--- a/docs/content/jwt/_index.Rmd
+++ b/docs/content/jwt/_index.Rmd
@@ -8,4 +8,5 @@ weight: 2
 
 "JSON Web Tokens are an open, industry standard RFC 7519 method for representing claims securely between two parties." (jwt.io)
 
-The JWT stratgey allows to use JSON Web Tokens (JWT) to secure your plumber endpoints. A great introduction to JWT can be found [here](https://jwt.io/introduction/). JWT can be used to secure REST APIs without sessions. They are considered to be stateless.
+The JWT stratgey allows to use JSON Web Tokens (JWT) to secure your plumber endpoints. A great introduction to JWT can be found [here](https://jwt.io/introduction/). JWT can be used to secure REST APIs without sessions. They are considered to be stateless although they can also be used as stateful session tokens. 
+
