#2 make website more visible in readme.

--- a/README.Rmd
+++ b/README.Rmd
@@ -21,6 +21,7 @@ knitr::opts_chunk$set(
 
 The goal of sealr is to provide multiple authentication and authorization strategies for [plumber](https://www.rplumber.io/) by using [filters](https://www.rplumber.io/docs/routing-and-input.html#filters). In doing so, we hope to make best practices in authentication easy to implement for the R community.
 The package is inspired by the amazing [passport.js](http://www.passportjs.org/) library for Node.js.
+The *sealr* website can be found at [https://jandix.github.io/sealr/](https://jandix.github.io/sealr/docs/sealr/).
 
 ## Disclaimer
 
@@ -36,7 +37,7 @@ devtools::install_github("jandix/sealr")
 ```
 
 ## Documentation and Examples
-We provide more information and some simple sample implementations for different strategies and use cases on the project [website](https://jandix.github.io/sealr/docs/sealr/) (click on the headers in the navigation bar on the left to unfold the subsites / example sites). The site is a work in progress and we add content continuously. 
+We provide more information and some simple sample implementations for different strategies and use cases on the project website: [https://jandix.github.io/sealr/](https://jandix.github.io/sealr/docs/sealr/) (click on the headers in the navigation bar on the left to unfold the subsites / example sites). The site is a work in progress and we add content continuously. 
 
 ## Contribute
 
