--- a/docs/docs/oauth_google/_index.Rmd
+++ b/docs/docs/oauth_google/_index.Rmd
@@ -6,4 +6,9 @@ title: Google - OpenID Connect
 weight: 3
 ---
 
-coming soon
+The Google OAuth2 strategy allows you to use Google’s OpenID Connect
+interface to authenticate and authorize your users. A detailed
+introduction and best practices can be found
+[here](https://developers.google.com/identity/protocols/OpenIDConnect).
+The interface uses JWTs. Hence, the process can be considered stateless.
+Addtionally, the user tokens can be used to access Google APIs.
