#42 update of bookdown

--- a/bookdown/05_security.Rmd
+++ b/bookdown/05_security.Rmd
@@ -1,22 +1,19 @@
 
 # Security
 
-## R Markdown
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+When developing a plumber API, some considerations regarding security must be made.
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+Many things are already covered in the excellent [Security](https://www.rplumber.io/docs/security.html) section of the plumber docs, so we mostly link to the respective subsections and add specifics related to authentication/authorization.
 
-```{r cars}
-summary(cars)
-```
+## HTTPS
+Using HTTPS instead of the insecure HTTP is crucial when working with authentication. The data exchanged between your plumber API and the (frontend) application is *highly* sensitive. If you don't use https, those data will be sent across the network unencrypted and attackers could easily steal access tokens not only for your plumber API but also tokens exchanged as part of the OAuth dance used for authenticating using Google.
 
-## Including Plots
+Read more about why using HTTPS is critical in the [plumber docs](https://www.rplumber.io/docs/security.html#https). There you also learn more about how you can enable HTTPS for your plumber API. 
 
-You can also embed plots, for example:
+## Storing the token at the user's side
+In a typical backend-frontend architecture
 
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
+### Cookies and CSRF 
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+### Local storage and XSS
