--- a/bookdown/02_auth_strategies.Rmd
+++ b/bookdown/02_auth_strategies.Rmd
@@ -1,53 +1,52 @@
 
-# Examples 
-## JWT Simple Example
+# Strategies
 
-## Cookie Example
-In this example, we use an encrypted cookie to store the JWT. You can find the 
-full code for this example at the [end of this page](#code). 
-In order to do this, we register an encrypted session cookie ([see plumber docs](https://www.rplumber.io/docs/rendering-and-output.html#encrypted-cookies)):
 
-```{r register_cookie, eval = FALSE}
-# define a new plumber router
-pr <- plumber::plumber$new()
-# register cookie
-pr$registerHooks(plumber::sessionCookie(key = "EPCGoaMO9dIxIEPoOjOL4sjL4U6w0GQ5", name = "token"))
-```
+## JSON Web Tokens (JWT)
 
-In the `authentication` route, we then can set the JWT in the cookie.
-Note that we do not return the JWT to the user because the JWT will be transferred in the cookie instead.
+### Introduction 
 
-```{r set_cookie, eval = FALSE}
-pr$handle("POST", "/authentication", function (req, res, user = NULL, password = NULL) {
-  # ...
-  # ...
-  # set cookie
-  req$session$token <- jwt
-  return()
-})
-```
+"JSON Web Tokens are an open, industry standard RFC 7519 method for representing claims securely between two parties." (jwt.io)
 
-The filter looks the same as in the simple example except that we have to change the `token_location` parameter to `"cookie"` instead of `"header"`. 
+The JWT stratgey allows to use JSON Web Tokens (JWT) to secure your plumber endpoints. A great introduction to JWT can be found [here](https://jwt.io/introduction/). JWT can be used to secure REST APIs without sessions. They are considered to be stateless although they can also be used as stateful session tokens. 
 
-```{r jwt_strategy, eval=FALSE}
+
+JSON Web Tokens (JWT) *can* contain claims. "Claims are statements about an entity (typically, the user) and additional data" ([https://jwt.io/introduction/](https://jwt.io/introduction/)). They are expressed as key-value pairs.
+
+There are three different types of claims: registered, public and private claims. All types of claims are implemented in the same manner, they only differ in whether and where the claims are registered with the Internet Assigned Numbers Authority (IANA). For example, the `iss` claim is a registered claim defined in the JWT standard [RFC 7519](https://tools.ietf.org/html/rfc7519#page-8) and registered at IANA. See the [JWT Introduction](https://jwt.io/introduction/) of [jwt.io](jwt.io) for more details.
+
+`sealr` allows you to check for the validity of all types of claims in a given JWT using the `claims` argument of the `sealr::is_authed_jwt` function. 
+
+### Simple Example
+
+
+In the code [below](#code), you find a small example of how to implement a JWT strategy in an application.  
+
+The application consists of three routes. The first route allows your users to login and issues a JWT. The second route is an open route that does not require authentication. The third route requires authentication using the JWT.
+
+The JWT filter looks like this:
+
+```{r JWT strategy, eval=FALSE}
 # integrate the jwt strategy in a filter
 pr$filter("sealr-jwt", function (req, res) {
   # simply call the strategy and forward the request and response
-  # please change the secret
   sealr::authenticate(req = req, res = res, is_authed_fun = sealr::is_authed_jwt,
-                      token_location = "cookie", secret = secret)
+                      token_location = "header", secret = secret)
 })
 ```
 
 :warning: Please change the secret to a super secure secret of your choice. Please notice that you have to `preempt = c("sealr-jwt")` to routes that should **not** be protected.
 
-### Run the example
-Copy the code from [below](#code) in a new R file and 
-save it under `jwt_cookie_example.R`. In the R console, run:
+#### Run the example
+
+Copy the code from [below](#code_simple) in a new R file and 
+save it under `jwt_simple_example.R`. In the R console, run:
 
 ```{r eval = FALSE}
-plumber::plumb("jwt_cookie_example.R")
+plumber::plumb("jwt_simple_example.R")
 ```
+
+This will make the API available at `localhost:9090`.
 
 In order to run this example, you need the following packages installed: 
 
@@ -58,7 +57,7 @@ In order to run this example, you need the following packages installed:
 - jsonlite
 
 
-#### Get authentication 
+#### Get authentication
 
 Using curl, Postman or a similar tool for sending HTTP requests, send a POST request with the details of one of the two users that are in the API's "database" (in this simplified example, a data frame).
 
@@ -83,37 +82,29 @@ kableExtra::kable(users, format = "markdown")
 
 For example, in curl: 
 
-**Note**: You might get different encrypted JWTs in your `cookies_jane.txt` as `jose::jwt_encode_hmac` automatically adds the time when the JWT was issued as a claim (`iat` claim). 
-
 ```
-curl  --cookie-jar cookies_jane.txt --data '{"user": "jane@example.com", "password": "12345"}' localhost:9090/authentication
+curl --data '{"user": "jane@example.com", "password": "12345"}' localhost:9090/authentication
 ```
 
-The `--cookie-jar` argument will store the cookie in a plain-text file in your current directory called `cookies_jane.txt`.
-
-If you inspect this file (e.g. using `cat cookies_jane.txt`), you should see something like this: 
+gives back the JWT:
 
 ```
-# Netscape HTTP Cookie File
-# https://curl.haxx.se/docs/http-cookies.html
-# This file was generated by libcurl! Edit at your own risk.
-
-localhost	FALSE	/	FALSE	0	token	R/cOKStnaCrwojcbL4Uk1602scv7ln9PClDYO2LlfHd0zYtd+vYrGB6oTX7wvpp5hmipFxqnQ0FDwEdz1H7IjCr6KCxxUHnpWu8r0IjCA4zLHbJz/i5npGe16Ei+OhbOGbluT/An+0GnfzXsna4q4vHoB2P+GkUPZL3Xe7tZxIX+UHSk005tX89NcSLpVy6J
+["eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpYXQiOjE1NTE0NDk5NTcsInVzZXJJRCI6MX0.0563N-dcz9zY-NF9DQpUnHIONZRWmZU1rb894xxHcNU"]
 ```
 
-The token is the gibberish part at the end. It is indeed the JWT but it is encrypted and hence does not *look* like a JWT. 
+**Note**: You might get different JWTs as `jose::jwt_encode_hmac` automatically adds the time when the JWT was issued as a claim (`iat` claim). However, those examples should still work because we do not add an expiration time to the token -  something you should definetely consider for production use cases.  
 
-Trying to get a token cookie for a user that is not in the database of course fails: 
 
+Trying to authenticate with a user that is not in the database fails: 
 ```
-curl --cookie-jar cookies_drake.txt --data '{"user": "drake@example.com", "password": "10111213"}' localhost:9090/authentication
+curl --data '{"user": "drake@example.com", "password": "10111213"}' localhost:9090/authentication
 ```
 
 ```
 {"status":["Failed."],"code":[401],"message":["User or password wrong."]}
 ```
 
-### Route without required authentication 
+#### Route without required authentication
 
 Everyone can access the `/` route because it does not require authentication - the `sealr-jwt` filter is `preempt`ed for this route:
 ```
@@ -121,9 +112,9 @@ curl localhost:9090
 ["Access to route without authentication was successful."]
 ```
 
-### Route with required authentication 
+#### Route with authentication
 
-Trying to access the `/secret` route without a valid cookie fails because it goes through the `sealr-jwt` filter where the `sealr::jwt` function will check for the correct authentication details - in this case a valid JWT in `token` cookie. 
+Trying to access the `/secret` route without a JWT fails because it goes through the `sealr-jwt` filter where the `sealr::jwt` function will check for the correct authentication details - in this case a valid JWT in the Authorization header. 
 
 ```
 curl localhost:9090/secret
@@ -133,27 +124,22 @@ curl localhost:9090/secret
 {"status":["Failed."],"code":[401],"message":["Authentication required."]}
 ```
 
-But if you add the cookies for Jane to the request, authentication is successful.
+Use the JWT obtained with the first curl command to make an authenticated request to this route.
 
 ```
-curl --cookie cookies_jane.txt localhost:9090/secret
-```
-
-```
+curl -H "Authorization: Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpYXQiOjE1NTE0NDk5NTcsInVzZXJJRCI6MX0.0563N-dcz9zY-NF9DQpUnHIONZRWmZU1rb894xxHcNU" localhost:9090/secret
 ["Access to route requiring authentication was successful."]
 ```
 
 
-### Code {code}
-```{r full_code, code=readLines("examples/jwt_cookie_example.R"), eval=FALSE}
+#### Code {#code_simple}
+```{r full_code_simple, code=readLines("../examples/jwt_simple_example.R"), eval=FALSE}
 
 ```
 
 
-
-## JWT Claims Example 
-
-In this example implementation (see full code [below](#code)), we have two filters:
+### Claims Example
+In this example implementation (see full code [below](#code_claims)), we have two filters:
 
 The filter `sealr-jwt` simply checks whether the user is authenticated and that the issuer claim `iss` is set to `mygreatplumberapi`, the value we set in the `authentication` route.
 The second filter  `sealr-jwt-admin-only` additionally checks whether the user is an admin by validating that the claim `admin` is `TRUE`. 
@@ -184,8 +170,8 @@ endpoints in the future (kind of "reverting" the `preempt` logic). See [this plu
 As a workaround, you could put your authentication / authorization checks in the individual endpoints.
 In this case, use `is_authed_*` functions instead of the `authenticate` wrapper.
 
-### Run the example
-Copy the code from [below](#code) in a new R file and 
+#### Run the example
+Copy the code from [below](#code_claims) in a new R file and 
 save it under `jwt_claims_example.R`. In the R console, run:
 
 ```{r eval = FALSE}
@@ -201,7 +187,6 @@ In order to run this example, you need the following packages installed:
 - httr
 - jose
 - jsonlite
-
 
 #### Get authentication
 
@@ -289,11 +274,118 @@ curl -H "Authorization: Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJt
 
 {"status":["Failed."],"code":[401],"message":["Authentication required."]}
 ```
+#### Code {#code_claims}
 
-### Code {#code}
-
-```{r, code = readLines("examples/jwt_claims_example.R"), eval = FALSE}
+```{r, code = readLines("../examples/jwt_claims_example.R"), eval = FALSE}
 
 ```
+
+## Open ID Connect - Google
+
+### Introduction 
+
+
+The Google OAuth2 strategy allows you to use Google’s OpenID Connect
+interface to authenticate and authorize your users. A detailed
+introduction and best practices can be found
+[here](https://developers.google.com/identity/protocols/OpenIDConnect).
+The interface uses JWTs. Hence, the process can be considered stateless.
+Addtionally, the user tokens can be used to access Google APIs.
+
+
+
+### Example 
+#### Obtain Google OAuth credentials 
+
+In order to run this example, you need to obtain OAuth2.0 credentials for your plumber API 
+so that Google later knows that it is authenticating the user to a legitimate application. 
+For this, create a new **project** in the [Google API Console](https://console.developers.google.com/) - you 
+may need to authorize your Google account first if you are not yet a user of Google's developer platform.
+
+Once you have created your project, follow the instructions on "Obtain OAuth 2.0 credentials" [here](https://developers.google.com/identity/protocols/OpenIDConnect). When you have to select
+the application type, select "Other". 
+Store the client ID and the client secret as environment variables in your R session using 
+the following commands. 
+
+
+```{r eval = FALSE}
+Sys.setenv("GOOGLE_CLIENT_ID" = "yourid")
+Sys.setenv("GOOGLE_CLIENT_SECRET" = "yoursecret")
+```
+
+This will make the client and secret available for your *current* R session. If you want
+to make them available beyond your current session, use `usethis::edit_r_environ` and
+add them in the file that opens like this: 
+
+```
+GOOGLE_CLIENT_ID="yourid"
+GOOGLE_CLIENT_SECRET="yoursecret"
+```
+Save and close the file. 
+
+#### Run the plumber API
+Copy the code from [below](#code_google) in a new R file and 
+save it under `oauth2_google_simple_example.R`. In the R console, run:
+
+```{r eval = FALSE}
+plumber::plumb("oauth2_google_simple_example.R")
+```
+
+This will make the API available at `localhost:9090`.
+
+In order to run this example, you need the following packages installed: 
+
+- sealr
+- plumber
+- httr
+- jose
+- jsonlite
+
+
+#### Authenticate yourself to the plumber API
+
+Open your browser and enter `http://localhost:9090/authentication/` in the address bar.
+You'll be redirected to Google. Authorize your application / plumber API. 
+You'll be again redirected to a JSON response that, depending on your browser, should look something like this (tokens are blacked out):
+
+![google return](/sealr/docs/images/google_oauth_return.png)
+
+It contains:
+
+- `access_token`: the token you would need if you wanted to access any of Google's APIs in your plumber API. If you only use Google to **authenticate** users, this will not be necessary.
+- `expires_in`: how long the access token is valid in seconds. This value is set by Google. In this case, the access token is valid for one hour. 
+- `refresh_token`: the token you can could to refresh your access token. We have not implemented the refresh logic in this example though. 
+- `scope`: the scope your plumber API requested to authorize from the user. In this example, we only requested the "userinfo.profile" scope. 
+- `token_type`: type of token. This will always be "Bearer". Prepend this to your HTTP Authorization Header (see below). 
+- `id_token`: The ID token. A JSON Web Token (see section on JWT) that contains information about the identify of the user. This token is signed by Google. **This is the token you send in the HTTP Authorization header** (see below).
+
+See also the explanation of the return values on [Google's OpenID Connect website](https://developers.google.com/identity/protocols/OpenIDConnect#authuser). 
+
+#### Send an authenticated request
+
+Open a terminal and enter the following command, replacing the YOUR_ID_TOKEN with 
+the `id_token` from your response. 
+
+```
+curl -H "Authorization: Bearer YOUR_ID_TOKEN" localhost:9090/secret
+```
+
+The ID token will be quite long, so maybe first edit this command in your text editor of choice 
+before copying it to the terminal. Hit enter. 
+
+You should get back: 
+
+````
+{"message":["Successfully accessed the secret endpoint."]}
+````
+
+
+
+#### Code {#code_google}
+
+```{r, code = readLines("../examples/oidc_google_simple_example.R"), eval = FALSE}
+
+```
+
 
 
